# epi-surveillance

./: .gitignore  PIPELINE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: main.py  vision.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
