[project]
name = "surveillance-epi-yolov8"
version = "0.1.0"
description = "Prototype local de surveillance de sécurité EPI avec FastAPI et YOLOv8."
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "opencv-python>=4.8.0",
  "ultralytics>=8.0.0",
  "python-multipart>=0.0.6",
  "aiofiles>=23.1.0",
]
